--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -6,4 +6,4 @@ p, h1, h2 {color:navy}
 .evenrow{background-color: darkseagreen;}
 
 h1 {font-size: 1.1em;}
-h2 {font-size: .5em;}
+h2 {font-size: 1.01em;}
