--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -1,5 +1,6 @@
 body {background-color: #BDBDD7;}
 body {color:#160040;}
+a {color: #00454A;}
 a:hover {color: #4C0070;}
 a:visited {color:#3F0071;}
 
