--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -4,6 +4,8 @@ a {color: #00454A;}
 a:hover {color: #4C0070;}
 a:visited {color:#3F0071;}
 
+h1 {color: #7045AF;}
+
 nav {background-color: #4ECCA3;}
 nav a{color:#404B69;}
 nav a:hover{background-color: #278EA5;}
