--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -26,7 +26,8 @@ nav {
 .row1 {background-color: #FFFFFF; border-radius: 25px;
 padding: 20px;}
 
-.row2 {background-color: #FFFFFF; border-radius: 25px; padding: 30px;}
+.row2 {background-color: #FFFFFF; border-radius: 25px; padding: 30px;
+flex-wrap: wrap;}
 .form {float: right; margin-left: 25px;}
 
 .logopic {float: left; margin-right: 10px;}
@@ -58,3 +59,5 @@ flex:3;}
     padding: 10px;
     margin-bottom: 10px;
 flex:1;}
+
+.bannerpic {width: 100%;}
