--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -61,3 +61,8 @@ flex:3;}
 flex:1;}
 
 .bannerpic {width: 100%;}
+
+@media only screen and (max-width: 600px){
+    nav {font-size:2em;}
+    nav a{size: 100%; display: block;}
+}
