--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -64,5 +64,7 @@ flex:1;}
 
 @media only screen and (max-width: 600px){
     nav {font-size:2em;}
-    nav a{size: 100%; display: block;}
+    nav a{size: 100%; display: block; padding:15px;}
+    nav span{display:none;
+    }
 }
