--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -11,7 +11,7 @@ a:visited {color:#3F0071;}
 h1, h2, h3 {color: #7045AF;}
 
 nav {background-color: #4ECCA3;}
-nav a{color:#404B69;}
+nav a{color:#7045AF;}
 nav a:hover{background-color: #278EA5;}
 nav {
     border: 10px;
