--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -17,7 +17,7 @@ nav {
     border: 10px;
     padding: 10px;
     margin-bottom: 30px;}
-nav:visited{color:#7045AF;}
+nav a:visited{color:#7045AF;}
 
 .row1, .row2 {display: flex;}
 .row2 article {padding: 20px;}
