--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -6,7 +6,7 @@ body {color:#160040;}
 
 a {color: #00454A;}
 a:hover {color: #4C0070;}
-a:visited {color:#7045AF;}
+a:visited {color:#462c6d;}
 
 h1, h2, h3 {color: #7045AF;}
 
