--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -11,13 +11,13 @@ a:visited {color:#462c6d;}
 h1, h2, h3 {color: #7045AF;}
 
 nav {background-color: #4ECCA3;}
-nav a{color: #462c6d;}
+nav a{color: #4C0070;}
 nav a:hover{background-color: #278EA5;}
 nav {
     border: 10px;
     padding: 10px;
     margin-bottom: 30px;}
-nav a:visited{color: #462c6d;}
+nav a:visited{color: #4C0070;}
 
 .row1, .row2 {display: flex;}
 .row2 article {padding: 20px;}
