--- a/project6/styles.css
+++ b/project6/styles.css
@@ -1,3 +1,6 @@
-body {background-color: #FFDBDA;}
+body {background-color: #FFDBDA;
+    font-family: 'Poppins', sans-serif;}
 nav{font-family: 'Ms Madi', cursive;}
-h1{font-family:'Ms Madi', cursive;}
+h1, h2{font-family:'Ms Madi', cursive;}
+
+
