--- a/project6/styles.css
+++ b/project6/styles.css
@@ -8,7 +8,5 @@ h2{font-family: 'Poppins', sans-serif;
 .content, .content2 {
     display: flex; 
     border: 2px; 
-    padding: 2px;
-    width:45px;}
+    padding: 2px;}
 
-.pics {width: 20px;}
