--- a/project6/styles.css
+++ b/project6/styles.css
@@ -1,8 +1,12 @@
 body {background-color: #FFDBDA;
     font-family: 'Poppins', sans-serif;}
 nav, header {font-family: 'Ms Madi', cursive;
-    justify-content: space-around;
-    font-size: 30px;}
+    font-size: 45px;
+    background-color: #9DA3A4;
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+    text-align: center;}
 nav a{color:#604D53;}
 h1 {font-family:'Ms Madi', cursive;}
 h2{font-family: 'Poppins', sans-serif;
