--- a/project6/styles.css
+++ b/project6/styles.css
@@ -1,17 +1,22 @@
 body {background-color: #FFDBDA;
     font-family: 'Poppins', sans-serif;}
-nav, header {font-family: 'Ms Madi', cursive;
+nav {font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    background-color: #9DA3A4;
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;}
+header{font-family:  'Ms Madi', cursive;
     font-size: 45px;
     background-color: #9DA3A4;
     display: flex;
     justify-content: space-between;
     padding: 8px;
-    text-align: center;}
+    width: 45px;}
 nav a{color:#604D53;}
 h1 {font-family:'Ms Madi', cursive;}
 h2{font-family: 'Poppins', sans-serif;
     font-style: italic;}
-
 .content, .content2 {
     display: flex; 
     border: 2px; 
