--- a/project6/styles.css
+++ b/project6/styles.css
@@ -24,8 +24,11 @@ h2{font-family: 'Poppins', sans-serif;
 
 .content, .content2 {
     display: flex; 
-    border: 2px; 
-    padding: 2px;}
+    border: 5px; 
+    padding: 2px;
+    width: 100%;
+    justify-content: space-evenly;
+    text-align: center;}
 
 
 
