--- a/project6/styles.css
+++ b/project6/styles.css
@@ -1,5 +1,6 @@
 body {background-color: #FFDBDA;
-    font-family: 'Poppins', sans-serif;}
+    font-family: 'Poppins', sans-serif;
+}
 
 nav {font-family: 'Poppins', sans-serif;
     font-size: 25px;
@@ -20,7 +21,8 @@ nav a{color:#604D53;}
 
 h1 {font-family:'Ms Madi', cursive;}
 h2{font-family: 'Poppins', sans-serif;
-    font-style: italic;}
+    font-style: italic;
+    text-align: center;}
 
 .content, .content2 {
     display: flex; 
