--- a/project6/styles.css
+++ b/project6/styles.css
@@ -1,6 +1,6 @@
 body {background-color: #FFDBDA;
     font-family: 'Poppins', sans-serif;
-}
+    text-align: center;}
 
 nav {font-family: 'Poppins', sans-serif;
     font-size: 25px;
