--- a/project6/styles.css
+++ b/project6/styles.css
@@ -32,5 +32,11 @@ h2{font-family: 'Poppins', sans-serif;
     justify-content: space-evenly;
     text-align: center;}
 
+@media only screen and (max-width: 600px){
+    nav {font-size:2em;}
+    nav a{size: 100%; display: block; padding:15px;}
+    nav span{display:none;}
+    }
+
 
 
