--- a/project7/styles.css
+++ b/project7/styles.css
@@ -80,6 +80,8 @@ h2{font-family: 'Poppins', sans-serif;
     .content, .content2{
         display: block;
         flex: 1;}
+    .icon {width: 100%;
+        height: 100%;}
     }
 
 
