--- a/project7/styles.css
+++ b/project7/styles.css
@@ -77,7 +77,7 @@ h2{font-family: 'Poppins', sans-serif;
         display: block; 
         padding: 15px;}
     nav span{display: none;}
-    .content, .content2{
+    .content, .content2, .content3, .content4, .homecontent{
         display: block;
         flex: 1;}
     .icon {width: 100%;
