--- a/project7/styles.css
+++ b/project7/styles.css
@@ -62,11 +62,9 @@ h2{font-family: 'Poppins', sans-serif;
     justify-content: space-evenly;
     text-align: center;}
 
-.homecontent {
-    display: block;
-    border: 5px;
-    padding: 2px;
-    justify-content: space-evenly;
+.homecontent, .illo1, .illo2, .illo3, .homegroupfinal {
+    display: flex;
+    justify-content: space-between;
 }
 
 @media only screen and (max-width: 600px){
@@ -102,12 +100,16 @@ h2{font-family: 'Poppins', sans-serif;
         max-height: 100%;
         max-width: 100%}
 
+    .icon {padding: 0;
+        display: block;
+        margin: 0 auto;
+        height: 150px;
+        width: 150px;
+        float:none;}
+
     .hometext, .homelist, .hometext2, .timelinetext1, .timelinetext2, .rebrandtext, .rebrandlist {display: block;
         flex: 1;
         width: auto;
-        height: auto;}
-
-    .icon {width: auto;
         height: auto;}
     }
 
