--- a/project7/styles.css
+++ b/project7/styles.css
@@ -21,7 +21,15 @@ body {background-color: #FFDBDA;
     margin: 2px;
     font-size: 19px;}
 
-table, td, th {border: 1px solid black;}
+td, th {border: 1px solid black;}
+.kewpietable {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 15px;
+    border: 1px solid;
+    background-color: #9DA3A4;
+    background-clip: padding-box;}
 
 .rebrandtext{display: flex;
     float: right;
@@ -135,7 +143,7 @@ h2{font-family: 'Poppins', sans-serif;
         width: 150px;
         float:none;}
 
-    .hometext, .homelist, .rosetext, .timelinetext1, .timelinetext2, .rebrandtext, .rebrandlist, .content {display: block;
+    .hometext, .homelist, .rosetext, .timelinetext1, .timelinetext2, .rebrandtext, .rebrandlist, .content, .kewpietable {display: block;
         flex: 1;
         width: auto;
         height: auto;}
