--- a/project7/styles.css
+++ b/project7/styles.css
@@ -21,7 +21,8 @@ body {background-color: #FFDBDA;
     margin: 2px;
     font-size: 19px;}
 
-td, th {border: 1px solid black;}
+td {border: 1px solid black;}
+
 .kewpietable {
     margin-left: auto;
     margin-right: auto;
@@ -126,7 +127,7 @@ h2{font-family: 'Poppins', sans-serif;
         display: block;
         margin: 0 auto;
         max-height: 100%;
-        max-width: 100%
+        max-width: 100%;
     }
 
     .tarakogroup {
@@ -141,10 +142,22 @@ h2{font-family: 'Poppins', sans-serif;
         margin: 0 auto;
         height: 150px;
         width: 150px;
-        float:none;}
+        float: none;}
 
-    .hometext, .homelist, .rosetext, .timelinetext1, .timelinetext2, .rebrandtext, .rebrandlist, .content, .kewpietable {display: block;
+    .hometext, .homelist, .rosetext, .timelinetext1, .timelinetext2, .rebrandtext, .rebrandlist, .content {
+        display: block;
         flex: 1;
         width: auto;
         height: auto;}
+    
+
+    .kewpietable {
+        display: block;
+        max-height: 100%;
+        max-width: 100%;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin: auto;
+        padding: 15px;}
     }
