--- a/project7/styles.css
+++ b/project7/styles.css
@@ -122,7 +122,7 @@ h2{font-family: 'Poppins', sans-serif;
         max-height: 100%;
         max-width: 100%}
 
-    .mytarako, .mayo, .illo1, .illo2, .illo3, .homegroup, .rose, .rebrandgroup, .roseinfo, .voteillo {
+    .mytarako, .mayo, .illo1, .illo2, .illo3, .homegroup, .rose, .rebrandgroup, .roseinfo, .voteillo, .hometiktok {
         padding: 0;
         display: block;
         margin: 0 auto;
